# fantasy-portfolio-analysis

./: .gitignore  README.md  portfolio_analysis.ipynb  pyproject.toml
src/: analyze.py  backtest.py  data.py  portfolio_analysis.ipynb  run_analyze.py  test_backtest.py  utils.py
